add bom for qmc5883l
放了个 qmc5883l 的 BOM

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title> CreateFuture </title>
 <body>
 <a href = "https://dhu-createfuture.github.io/BOM/bmi270.html"> bmi270 </a>
+<a href = "https://dhu-createfuture.github.io/BOM/qmc5883l.html"> qmc5883l </a>
 </body>
 </head>
 </html>
